--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <ul>
                             <li><span>Portfolio Website</span><br>Web Page designed</li>
                             <li><span>Electricity Billing System</span><br>Java Project</li> 
-                            <li><span>Blog Website</span><br>Website using node.js</li>  
+                            <li><span>Tindog Website</span><br>Website using BootStrap</li>  
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -124,8 +124,8 @@
                 <div class="work">
                     <img src="images/download.jpeg" alt="">
                     <div class="layer">
-                        <h3>Blog Site</h3>
-                        <p>Built Blog Website using Node and MongoDB</p>
+                        <h3>Tindog WebSite</h3>
+                        <p>Built Tindog Website using HTML, CSS and BootStrap</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
