--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/download (1).png" alt="">
+                    <img src="images/tindog.png" alt="">
                     <div class="layer">
                         <h3>Tindog WebSite</h3>
                         <p>Built Tindog Website using HTML, CSS and BootStrap</p>
